[gd_scene load_steps=5 format=3 uid="uid://b1nalvenb4n3e"]

[ext_resource type="FontFile" uid="uid://cthro4rqrdyu0" path="res://Fonts/press-start-2p-font/PressStart2P-vaV7.ttf" id="1_73b23"]
[ext_resource type="Script" path="res://Scripts/milestone.gd" id="1_g0cgu"]
[ext_resource type="Script" path="res://Scripts/action_button.gd" id="2_rcvpa"]
[ext_resource type="Texture2D" uid="uid://bu88mnlkp2i7f" path="res://Arts/passport_milestone_icon.png" id="3_yrykp"]

[node name="Milestone" type="Control"]
z_index = 1
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_g0cgu")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0.0705882, 0.0980392, 1)

[node name="InfoText" type="RichTextLabel" parent="."]
layout_mode = 0
offset_left = 44.0
offset_top = 45.0
offset_right = 937.0
offset_bottom = 214.0
theme_override_colors/default_color = Color(0.623529, 1, 0.796078, 1)
theme_override_constants/line_separation = 2
theme_override_fonts/normal_font = ExtResource("1_73b23")
theme_override_font_sizes/normal_font_size = 20
text = "This book feels different.

It is not a book. It is a disguised box. 

Elysia keeps her passport in it.

Now I remember it. "

[node name="IconDisplay" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 405.0
offset_top = 234.0
offset_right = 522.0
offset_bottom = 400.0
texture = ExtResource("3_yrykp")
stretch_mode = 5

[node name="ActionButton" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = 180.0
offset_top = 434.0
offset_right = 727.0
offset_bottom = 477.0
script = ExtResource("2_rcvpa")
metadata/_edit_group_ = true

[node name="ActionText" type="Label" parent="ActionButton"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -16.0
offset_right = 544.0
offset_bottom = 16.0
grow_vertical = 2
theme_override_fonts/font = ExtResource("1_73b23")
theme_override_font_sizes/font_size = 32
text = "Take disk & Continue"

[node name="OptionHighlight" type="Label" parent="ActionButton"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = -40.0
offset_top = -16.0
offset_right = -8.0
offset_bottom = 16.0
grow_vertical = 2
theme_override_fonts/font = ExtResource("1_73b23")
theme_override_font_sizes/font_size = 32
text = ">"
